[package]
name = "tweetnacl-rs-near"
version = "0.1.3"
authors = ["prathmesh"]
edition = "2018"
readme = "README.md"
description = "TweetNacl library, re-export from sodalite."
license = "MIT"
documentation = "https://docs.rs/tweetnacl-rs"
homepage = "https://github.com/clearloop/tweetnacl-rs"
repository = "https://github.com/clearloop/tweetnacl-rs"
categories = ["cryptography", "algorithms"]
keywords = ["sodalite", "tweetnacl", "near"]

[dependencies]
hex = "0.3.2"
rand = "0.6.5"
sodalite = "0.3"
near-sdk = "4.0.0"
